--- a/notes_react_app/src/components/RadioChanger/NotesRadio.module.css
+++ b/notes_react_app/src/components/RadioChanger/NotesRadio.module.css
@@ -5,7 +5,8 @@
 .notesRadioText {
       color: gray;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 16px;
+      font-family: Arial, Helvetica, sans-serif;
       margin: 5px 15px;
 }
 
