--- a/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
+++ b/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
@@ -1,9 +1,14 @@
 .notesButton {
       padding: 5px 15px;
       margin: 10px 10px 10px 10px;
-      color: red;
+      color: black;
       font-size: 14px;
+      font-family: Arial, Helvetica, sans-serif;
       background: transparent;
       border: 1px solid red;
+      border-radius: 10px;
       cursor: pointer;
+}
+.notesButton:hover {
+      background: rgba(255, 0, 0, 0.1);
 }
