--- a/notes_react_app/src/components/ui/NotesInput/NotesInput.module.css
+++ b/notes_react_app/src/components/ui/NotesInput/NotesInput.module.css
@@ -3,8 +3,9 @@
       padding: 5px 15px;
       margin: 10px 10px 10px 10px;
       font-size: 16px;
-      color: red;
+      font-family: Arial, Helvetica, sans-serif;
+      color: black;
       border: 1px solid red;    
-      border-radius: 4px;
+      border-radius: 5px;
       background: transparent;
 }
