--- a/notes_react_app/src/styles/index.css
+++ b/notes_react_app/src/styles/index.css
@@ -1,3 +1,24 @@
+.authContainter {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      overflow: auto;
+}
+.authFormHeader {
+      font-size: 26px;
+      letter-spacing: 10px;
+      text-align: center;      
+      font-family: Arial, Helvetica, sans-serif;
+      color: red;
+      margin: 20px 10px;
+}
+
 .errorText {
       font-size: 12px;
       font-family: Arial, Helvetica, sans-serif;
@@ -6,5 +27,16 @@
       color: red;
 }
 .errorText:empty::before {
+      content: "\00a0";
+}
+
+.successText {
+      font-size: 12px;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: left;
+      margin: 5px 10px;
+      color: green;
+}
+.successText:empty::before {
       content: "\00a0";
 }
