--- a/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
+++ b/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
@@ -4,11 +4,12 @@
       color: black;
       font-size: 14px;
       font-family: Arial, Helvetica, sans-serif;
-      background: transparent;
+      background: white;
       border: 1px solid red;
       border-radius: 10px;
       cursor: pointer;
 }
 .notesButton:hover {
-      background: rgba(255, 0, 0, 0.1);
+      background-color: rgb(255, 68, 68);
+      color: white;
 }
