Написал update и create для групп заметок

--- a/notes_react_app/src/layouts/LeftMenu/LeftMenu.module.css
+++ b/notes_react_app/src/layouts/LeftMenu/LeftMenu.module.css
@@ -13,6 +13,6 @@
 }
 .leftMenuTitle {
       font-size: 26px;      
-      color: red;
+      color: rgb(249, 76, 76);
       letter-spacing: 4px;
 }
