--- a/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
+++ b/notes_react_app/src/components/ui/NotesButton/NotesButton.module.css
@@ -5,11 +5,14 @@
       font-size: 14px;
       font-family: Arial, Helvetica, sans-serif;
       background: white;
-      border: 1px solid red;
+      border: 1px solid rgb(249, 76, 76);
+      outline: 1px transparent;
       border-radius: 10px;
       cursor: pointer;
 }
 .notesButton:hover {
-      background-color: rgb(255, 68, 68);
-      color: white;
+      background-color: white;
+      border: 1px solid black;
+      outline: 1px solid black;
+      
 }
