--- a/notes_react_app/src/components/ui/NotesInput/NotesInput.module.css
+++ b/notes_react_app/src/components/ui/NotesInput/NotesInput.module.css
@@ -5,7 +5,7 @@
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
       color: black;
-      border: 1px solid red;    
+      border: 1px solid rgb(249, 76, 76);    
       border-radius: 5px;
       background: transparent;
 }
