--- a/notes_react_app/src/pages/AuthForm/AuthForm.module.css
+++ b/notes_react_app/src/pages/AuthForm/AuthForm.module.css
@@ -3,7 +3,7 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      border: 1px solid red;
+      border: 1px solid rgb(249, 76, 76);
       width: 300px;
       border-radius: 16px;
 }
