--- a/notes_react_app/src/styles/index.css
+++ b/notes_react_app/src/styles/index.css
@@ -20,7 +20,7 @@ html body {
       font-size: 26px;
       letter-spacing: 10px;
       text-align: center;      
-      color: red;
+      color: rgb(249, 76, 76);
       margin: 20px 10px;
 }
 
@@ -28,7 +28,7 @@ html body {
       font-size: 12px;
       text-align: left;
       margin: 5px 10px;
-      color: red;
+      color: rgb(249, 76, 76);
 }
 .errorText:empty::before {
       content: "\00a0";
@@ -37,6 +37,7 @@ html body {
 .successText {
       font-size: 12px;
       text-align: left;
+      font-style: italic;
       margin: 5px 10px;
       color: green;
 }
